Adicionado pagina de caderneta de vacinas

--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "imuno-front"
+    }
+  },
+  "defaultProject": "imuno-front",
+  "cli": {
+    "analytics": false
+  }
 }
