--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "angular": "^1.8.2",
     "bootstrap": "^4.5.2",
     "primeng": "^10.0.1",
     "rxjs": "~6.5.5",
